# chatyrusty

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  readme.md  tailwind.config.js  tailwind.css
assets/css/: style.css  style.css.map
docker/: .env.example  docker-compose.yaml  docker-compose.yml
docker/volumes/db/: postmaster.pid
docker/volumes/db/base/1/: 2619
docker/volumes/db/base/16384/: 2619
docker/volumes/db/base/5/: 2619  pg_internal.init
docker/volumes/db/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
docs/RustChaty/: Contact List.bru  bruno.json
docs/RustChaty/environments/: Local.bru
public/: tailwind.css
rchaty-core/: Cargo.toml
rchaty-core/src/: channel.rs  chatchannel.rs  configuration.rs  kcloak.rs  kcloak_client.rs  lib.rs  model.rs  service.rs  service_auth.rs  util.rs
rchaty-core/src/channel/: email_vrf_channel.rs
rchaty-core/src/chatchannel/: master.rs  model.rs
rchaty-core/src/db/: repository.rs
rchaty-core/src/service/: service_auth.rs  service_contact.rs
rchaty-core/src/util/: hmac.rs  signature.rs
rchaty-server/: Cargo.toml
rchaty-server/src/: handlers.rs  htmx_handler.rs  main.rs  middleware.rs  model.rs  page_handler.rs  page_handlres.rs  server.rs  ws_handler.rs  ws_mock_handler.rs
rchaty-web/: Cargo.toml
rchaty-web/src/: error.rs  htmx.rs  lib.rs  page.rs
rchaty-web/templates/: 404.html  alert.html  base_template.html  error.html  login.html  login_clicked.html  macro_guard.html  redirect.html  signup.html
rchaty-web/templates/htmx/: alert.html  chat_incoming.html  contact_list.html  refresh_token.html  store_auth_token.html  verified_email_checker.html  verified_email_success.html
rchaty-web/templates/pages/: home.html  login.html  signup.html
src/: main.rs  routes.rs
src/components/: header.rs
src/views/: PageNotFound.rs  SignIn.rs  SignUp.rs
style/: package-lock.json  package.json  vite.config.js
style/src/scss/: style.scss
tailwind/: Makefile  package-lock.json
