[package]
name = "rchaty-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
tracing = "0.1.40"
keycloak = "21.0.102"
dotenvy = "0.15"
serde ={ version = "1.0.197", features = ["derive"] } 
reqwest = "0.11.27"
tokio-postgres = {version="0.7.10", features=["with-uuid-0_8"] }
tokio = { version = "1.37.0", features = ["full"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
uuid = "0.8.2"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.0"
