[package]
name = "rchaty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rchaty-core = { path = "../rchaty-core" }
rchaty-web = { path = "../rchaty-web" }

axum = { version = "0.7.5", features = ["tracing"]}
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] } # "0.5.2"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde ={ version = "1.0.197", features = ["derive"] } 
askama = {version = "0.12.1"}
