[package]
name = "rchaty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rchaty-core = { path = "../rchaty-core" }
rchaty-web = { path = "../rchaty-web" }

axum = { version = "0.7.5", features = ["tracing", "ws"]}
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] } # "0.5.2"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde ={ version = "1.0.197", features = ["derive"] } 
askama = {version = "0.12.1"}
axum-extra = { version = "0.9.3", features = ["typed-header"] }
async-mutex = "1.4.0"
crossbeam-channel = "0.5.12"
